# ai-checker

./: .impeccable.md  README.md  docker-compose.yml
.agents/skills/deploy-ai-checker-sfo/: SKILL.md
.agents/skills/deploy-ai-checker-sfo/agents/: openai.yaml
.agents/skills/deploy-ai-checker-sfo/scripts/: deploy-ai-checker-sfo.sh
.agents/skills/deploy-ai-checker-vmrackl3base2/: SKILL.md
.agents/skills/deploy-ai-checker-vmrackl3base2/agents/: openai.yaml
.agents/skills/deploy-ai-checker-vmrackl3base2/scripts/: deploy-ai-checker-vmrackl3base2.sh
admin/backend/: pyproject.toml
admin/backend/app/: __init__.py  config.py  fingerprint_algorithm.py  main.py  models.py  provider.py  repository.py  runner.py  scheduler.py  scoring.py  security.py
admin/backend/tests/: test_api.py  test_fingerprint_algorithm.py  test_provider.py  test_repository.py  test_runner.py  test_scoring.py
admin/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.d.ts  vite.config.js  vite.config.ts
admin/frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
admin/frontend/src/lib/: api.ts  (+9 more)
docs/: design-guideline.md
public/backend/: pyproject.toml
public/backend/app/: __init__.py  config.py  main.py  models.py  repository.py
public/backend/tests/: test_public_api.py
public/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.d.ts  vite.config.js  vite.config.ts
public/frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
(+61 files in other folders)
