# 业务说明：定义后台管理后端的运行依赖、测试依赖和代码质量规则，支撑任务管理与定时采样服务。
[project]
name = "ai-checker-admin-backend"
version = "0.1.0"
description = "Admin API and scheduler for AI Checker model similarity monitoring."
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42.0.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "redis>=5.0.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "fakeredis>=2.23.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["B008"]
